# invaders-emulator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  clean.bat  genie_clean.bat  genie_clean.sh  genie_gmake.sh  genie_raspberrypi.sh  genie_vs2017.bat  genie_vs2019.bat  genie_xcode10.sh  gensln.bat  update_dependencies.bat
data/: readme.txt
docs/: 8080_instruction_encoding.txt  Emulator 101 - 8080 By Opcode.html  hardware.txt
docs/Emulator 101 - 8080 By Opcode_files/: minimal.css
libs/: readme.txt
scripts/: genie.lua  genie_clean.bat  genie_clean.sh  genie_gmake.sh  genie_vs2017.bat  genie_vs2019.bat  genie_vs2022.bat  genie_xcode10.sh  install_sdl.bat
src/: 8080.cpp  8080.h  Assert.cpp  Audio.cpp  Audio.h  Display.cpp  Display.h  Helpers.cpp  Helpers.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  debugger.cpp  debugger.h  disassemble.cpp  hp_assert.cpp  hp_assert.h  imgui_breakpoints_window.cpp  imgui_breakpoints_window.h  imgui_disassembly_window.cpp  imgui_disassembly_window.h  imgui_memory_editor.h  invaders.cpp  machine.cpp  machine.h  main.cpp
src/debugger/: BreakpointsWindow.cpp  BreakpointsWindow.h  CpuWindow.cpp  CpuWindow.h  DebugWindow.cpp  DebugWindow.h  DisassemblyWindow.cpp  DisassemblyWindow.h  MachineWindow.cpp  MachineWindow.h  debugger.cpp  debugger.h  imgui_memory_editor.h
src/imgui/: imconfig.h  imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
